assets/styles/default.css
/* boostrap overrides */

body {
	padding-top: 40px;
}

a, [ng-click], .pointer {
	cursor: pointer;
}

.alert a, .alert .alert-link {
	color: #93c54b;
	text-decoration: none;
}

/* ng-sortable overrides */
.as-sortable-item-handle {
	cursor: pointer;
}

/* navbar */
nav,
.navbar {
	min-height: 40px;
	height: 40px;
	margin-bottom: 0;
}

.navbar-default {
	background-color: #79828C;
	border-bottom: 0;
}

.navbar-brand {
	height: 40px;
	padding: 10px 20px;
	font-size: 20px;
	font-weight: bold;
}

.navbar-default .navbar-nav > li > a,
.navbar-nav > li > a {
	padding: 6px 12px;
	border: solid #8e98a2;
	border-width: 0 1px 0 0;
}

.navbar-default .navbar-nav > li:last-child > a,
.navbar-nav > li > a {
	border-right: 0;
}

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
	background-color: #414B57;
}

.navbar .nav > li > a,
.navbar-nav > li > a {
	padding: 0 20px;
	text-transform: none;
	font-size: 16px;
	font-weight: normal;
	min-width: 100px;
	text-align: center;
	line-height: 40px;
	color: #fff;
}

.navbar .nav > li > a.small-width {
	min-width: 50px;
}

.navbar .navbar-nav li .badge {
	position: absolute;
	top: 1px;
	right: -3px;
	z-index: 1;
}

.badge-mention {
	background-color: #FFD300;
	color: #000;
	-webkit-animation: pulse 0.6s infinite;
	animation: bounce 0.6s infinite;
}

/* debrowning things */

.dropdown-menu {
	padding-top: 0;
	padding-bottom: 0;
}

.dropdown-menu > li > a {
	padding: 10px 20px;
	color: #333;
	font-size: 12px;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
	background-color: #eee;
	color: #333;
}

.dropdown-menu .divider {
	margin: 0;
	background-color: #ccc;
}

.table > thead > tr > th {
	border-bottom: 2px solid #ccc;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
	border-top: 1px solid #ccc;
}

.form-control,
input:focus, .form-control:focus {
	border: solid #ccc 1px;
}

.list-group-item {
	border-color: #ccc;
}

/* augments */

[splash] {
	position: fixed;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: #666;
	z-index: 9001;
	padding-top: 90px;
	text-align: center;
	font-family: "Cabin", Arial, sans-serif;
	font-size: 36px;
	font-weight: bolder;
	color: #fff;
}

[splash] img {
	width: 150px;
}

.no-gutter {
	padding-left: 0;
	padding-right: 0;
}

.col-center {
	float: none;
	margin: 0 auto;
}

.input-inline {
	display: inline-block;
	width: auto;
	padding-top: 2px;
}

.float {
	position: absolute;
}

.inline {
	display: inline-block;
	width: auto;
}

section {
	margin: 20px 0;
}

mark {
	display: inline-block;
	color: black;
	background-color: black;
}

mark:hover {
	color: white;
}

/* header dropdowns */

.header-dropdown {
	position: fixed;
	top: 40px;
	right: 0;
	width: 460px;
	height: 500px;
	margin-left: -300px;
	border: solid #ddd;
	border-width: 0 0 3px 3px;
	border-bottom-left-radius: 4px;
	background: #fff;
	overflow-x: hidden;
	font-size: 13px;
}

/* inbox */

.inbox-header {
	color: #fff;
	background-color: #555;
	padding: 5px 0 3px 5px;
}

.inbox {
	font-size: 14px;
}

.inbox ol {
	overflow-y: auto;
	overflow-x: hidden;
	height: 459px;
}

.inbox li {
	background-color: #414B57;
	border-bottom: solid #80868E 2px;
}

.inbox-author {
	float: left;
	width: 100px;
	padding-left: 5px;
	padding-top: 2px;
	color: #fff;
}

.inbox-message {
	display: block;
	min-height: 25px;
	margin-left: 100px;
	margin-top: 0;
	padding: 0 10px 5px 10px;
	background-color: #fff;
}

.inbox-message.read {
	background-color: #F5F5F5;
}

.inbox-message [bunker-message] {
	display: inline-block;
	width: 295px;
	padding-right: 10px;
}

.inbox-time {
	float: right;
	font-size: 12px;
}

/* emoticon */

[emoticon-menu] .row {
	border-bottom: solid #ddd 1px;
	padding: 0 15px;
	overflow: hidden;
}

[emoticon-menu] .row:last-of-type {
	border-bottom: none;
}

[emoticon-menu] .col-xs-3 {
	overflow: hidden;
	text-align: center;
}

[emoticon-menu] .emoticon-container {
	height: 23px;
}

[emoticon-menu] .emoticon {
	max-height: 23px;
}

[emoticon-menu] a {
	color: #333;
}

[emoticon-menu] a:hover {
	text-decoration: none;
}

[emoticon-menu] hr {
	margin: 4px 0 4px 0;
}

.emoticonListItem {
	margin-bottom: 4px;
}

.sortEmoticons a {
	margin: 17px;
}

.sortEmoticons input {
	margin: 9px 2px 4px 12px;
}

/* bunker stuff */

.topic {
	padding: 5px 10px;
	border-bottom: solid #eee 1px;
	line-height: 30px;
}

[fill], .fill {
	overflow: hidden;
}

.message-list {
	height: calc(100vh - 86px);
	overflow-y: auto;
	border-right: solid 1px #eee;
	margin: 0;
}
.message-list.has-topic {
	height: calc(100vh - 126px);
}

.message-container {
	position: relative;
}

.message {
	line-height: 30px;
	background-color: #414B57;
}

.message.local {
	background-color: #596470;
}

/* message type specific styles */

.message.message-type-8ball [bunker-message] {
	-webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
	-moz-animation: fadein 2.5s; /* Firefox < 16 */
	-o-animation: fadein 2.5s; /* Opera < 12.1 */
	animation: fadein 2.5s;
}

.message-author {
	float: left;
	width: 180px;
	color: white;
	padding-left: 4px;
	height: 30px;
	line-height: 30px;
}

.message-author * {
	vertical-align: middle;
}

.message-author .name {
	text-overflow: ellipsis;
	width: 108px;
	min-width: 108px;
	overflow: hidden;
	display: inline-block;
	padding-left: 4px;
	height: 30px;
	white-space: nowrap;
}

.message-author img {
	margin-left: 5px;
}

.message-body {
	min-height: 30px;
	margin-left: 180px;
	padding-left: 10px;
	padding-right: 150px;
	background: #fff;
}

.new-message-body {
	border-top: solid #eee 1px;
}

.message-body img {
	max-width: 100%;
	max-height: 500px;
}

.message-body .panel {
	margin: 0;
}

.message-body .panel-body {
	padding: 0;
}

.message-body pre {
	padding: 0;
	tab-size: 4;
}

.message-body .default-video-height .panel-body {
	/* height: 420px; */
}

.message-info {
	position: absolute;
	top: 0;
	right: 3px;
	padding-right: 5px;
}

.message-mention .message-body {
	background-color: #faf2cc;
}

.message-mention .message-caret {
	border-right-color: #faf2cc;
}

.message-input.edit-mode textarea {
	background-color: lightyellow;
}

.message-input textarea {
	resize: none;
	overflow: hidden;
}

.message-input input[type=text],
.message-input button {
	border-radius: 0;
}

.message-caret {
	content: "";
	position: absolute;
	left: 172px;
	top: 8px;
	width: 0;
	height: 0;
	border-bottom: 8px solid #fff;
	border-bottom: 8px solid rgba(255, 255, 255, 0);
	border-top: 8px solid #fff;
	border-top: 8px solid rgba(255, 255, 255, 0);
	border-right: 8px solid #fff;
}

.system-message {
	min-height: 30px;
	padding-left: 10px;
	padding-right: 7px;
	background-color: #fff;
	color: #999;
}

img.emoticon {
	max-height: 30px;
}

.imgur-gifv {
	position: relative;
}

/* member list */

.right-pane {
	height: calc(100vh - 86px);
}

.member-list {
	overflow-y: auto;
}

.member-list li.list-group-item {
	border-radius: 0;
	border-left: 0;
	border-right: 0;
	padding: 8px 12px;
}

.member-list li.list-group-item:first-of-type {
	border-top: none;
}

.member-list li.list-group-item a {
	color: #3e3f3a;
}

.member-list li .offline {
	opacity: 0.25;
}

.member-list .user-icon {
	display: inline-block;
	width: 20px;
	height: 20px;
	margin-right: 5px;
	text-align: center;
}

.member-list .status {
	margin-bottom: 4px;
}

.member-list .pull-right i {
	margin-right: 4px;
}

/* file upload related styles */
#bunker-dropzone-overlay {
	position: absolute;
	vertical-align: middle;
	top: 40px;
	width: 100%;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 97;
	visibility: hidden;
}

#bunker-dropzone-overlay > div {
	opacity: 0;
	transition: opacity .3s;
}

.dragover #bunker-dropzone-overlay {
	visibility: visible;
}

#bunker-dropzone-overlay .overlay {
	position: absolute;
	background: black;
	height: 100%;
	width: 100%;
	opacity: 0;
	transition: opacity .3s;
	z-index: 98;
}

.dragover #bunker-dropzone-overlay .overlay {
	opacity: .5;
}

#bunker-dropzone-overlay [overlay-contents] {
	text-align: center;
	position: relative;
	margin-top: 300px;
	color: white;
	z-index: 99;
	font-size: 2.5em;
}

.dragover #bunker-dropzone-overlay [overlay-contents] {
	opacity: 1;
}

.image-upload > img {
	display: block;
	margin: auto;
	max-width: 100%;
	max-height: 550px;
}

.loadingbutton {
	position: relative;
	padding-left: 28px;
	padding-right: 28px;
}

.loadingbutton-spinner {
	position: absolute;
	left: 12px;
	line-height: inherit; /* fa overrides line height, set it back to bootstrap's */
}

/* status */

.status {
	width: 6px;
	height: 6px;
	display: inline-block;
	vertical-align: middle;
	border-radius: 8px;
	margin-left: 4px;
}

.status.here {
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #00FF00), color-stop(1, #00BD00));
	background-image: -o-linear-gradient(bottom, #00FF00 0%, #00BD00 100%);
	background-image: -moz-linear-gradient(bottom, #00FF00 0%, #00BD00 100%);
	background-image: -webkit-linear-gradient(bottom, #00FF00 0%, #00BD00 100%);
	background-image: -ms-linear-gradient(bottom, #00FF00 0%, #00BD00 100%);
	background-image: linear-gradient(to bottom, #00FF00 0%, #00BD00 100%);
	box-shadow: 0 0 2px #00BD00;
}

.status.away {
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFF00), color-stop(1, #D4D400));
	background-image: -o-linear-gradient(bottom, #FFFF00 0%, #D4D400 100%);
	background-image: -moz-linear-gradient(bottom, #FFFF00 0%, #D4D400 100%);
	background-image: -webkit-linear-gradient(bottom, #FFFF00 0%, #D4D400 100%);
	background-image: -ms-linear-gradient(bottom, #FFFF00 0%, #D4D400 100%);
	background-image: linear-gradient(to bottom, #FFFF00 0%, #D4D400 100%);
	box-shadow: 0 0 2px #D4D400;
}

.room-options {
	position: absolute;
	width: 100%;
	bottom: -46px;
}

.debugging {
	padding: 8px 0;
	background-color: #F5D9DD;
	color: #666;
}

.debugging dl {
	margin-bottom: 5px;
}

/*date picker*/

.date-picker-above .dropdown-menu {
	margin-top: -252px;
	width: 272px;
	right: 4px !important;
	left: auto !important;
	top: auto !important;
	bottom: 50px;
}

/* mobile modifications */

@media (max-width: 480px) {

	.message-list {
		overflow-y: scroll;
		position: fixed;
		top: 40px;
		bottom: 40px;
		left: 0;
		right: 0;
		-webkit-overflow-scrolling: touch;
	}

	.message-author {
		width: 100%;
		height: auto;
		background-color: #414B57;
	}

	.message-caret {
		display: none;
	}

	.message-author .status {
		position: absolute;
		top: 5px;
		left: 0;
	}

	.message-body {
		border-top: solid #eee 1px;
		margin-left: 0;
		padding-right: 10px;
	}

	.message-input {
		position: fixed;
		bottom: 0;
	}
}

/* animations */

@keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-moz-keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-webkit-keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-o-keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-webkit-keyframes pulse {
	0% {
		-webkit-transform: scale(1);
	}
	50% {
		-webkit-transform: scale(1.2);
	}
	100% {
		-webkit-transform: scale(1);
	}
}

@keyframes pulse {
	0% {
		transform: scale(1);
	}
	50% {
		transform: scale(1.2);
	}
	100% {
		transform: scale(1);
	}
}

